tests/NormalTests/paczka1/fuzzy1/10189713.err
Error in line 10: W6LRXc S461 22,6
Error in line 9: o0sbaImIA A827 14,7
Error in line 24: XIqbf S984 83,3
